--- a/scss/layouts/_lo-elements.scss
+++ b/scss/layouts/_lo-elements.scss
@@ -25,7 +25,8 @@
     }
 
     .elements-info-layout {
-        margin-bottom: 50px;
+        margin-bottom: 100px;
+        padding-top: 50px;
         .documentation-features {
             padding-bottom: 80px;
             margin-bottom: 80px;
@@ -381,6 +382,8 @@
         }
     }
     .content-info-layout {
+        margin-bottom: 100px;
+        padding-top: 50px;
         .main-heading-area {
             padding-bottom: 25px;
             margin-bottom: 25px;
@@ -544,6 +547,8 @@
         }
     }
     .layouts-info-layout {
+        margin-bottom: 100px;
+        padding-top: 50px;
         .main-heading-area {
             padding-bottom: 25px;
             margin-bottom: 25px;
