--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -52,6 +52,16 @@
                         background: 0 0;
                         margin: 0;
                         padding: 0;
+                        position: relative;
+                        .progress-indicator {
+                            position: absolute;
+                            height: 1px;
+                            width: 30%;
+                            background: red;
+                            bottom: 0;
+                            left: 0;
+                            // z-index: 1;
+                        }
                         .nav-link { 
                             font-family: $font-roboto;
                             font-weight: 500;
@@ -61,21 +71,20 @@
                             padding: 0 0 0 0;
                             border-bottom: 1px solid #E4E4E4;
                             position: relative;
-                            &::before {
-                                content: "";
-                                position: absolute;
-                                border-bottom: 1px solid $color-secondary;
-                                left: 0;
-                                bottom: 0;
-                                width: 0;
-                                @include transition;
-                            }
-                            &:hover {
-                                color: $color-secondary;
-                                &::before {
-                                    width: 100%;
-                                }
-                            }
+
+                            
+                            
+                            // &.active {
+                            //     &::before {
+                            //         content: "";
+                            //         position: absolute;
+                            //         border-bottom: 1px solid $color-secondary;
+                            //         left: 0;
+                            //         bottom: 0;
+                            //         width: 50%;
+                            //         @include transition;
+                            //     }
+                            // }
                         }
                     }
                 }
@@ -106,7 +115,7 @@
                         @include transition;
                     }
                     .nav-link {
-                        color: red;
+                        // color: red;
                     }
                 }
             }
