Add line-scroll to content dropdown menus

--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -53,15 +53,7 @@
                         margin: 0;
                         padding: 0;
                         position: relative;
-                        .progress-indicator {
-                            position: absolute;
-                            background: red;
-                            width: 0;
-                            height: 1px;
-                            bottom: 0;
-                            left: 0;
-                            z-index: 1;
-                        }
+                        
                         .nav-link { 
                             font-family: $font-roboto;
                             font-weight: 500;
@@ -74,6 +66,15 @@
 
                             &.active {
                                 color: red;
+                                .progress-indicator {
+                                    position: absolute;
+                                    background: red;
+                                    width: 0;
+                                    height: 1px;
+                                    bottom: 0;
+                                    left: 0;
+                                    z-index: 1;
+                                };
                             }
 
                             
