--- a/scss/layouts/_lo-elements.scss
+++ b/scss/layouts/_lo-elements.scss
@@ -25,8 +25,8 @@
     }
 
     .elements-info-layout {
-        margin-bottom: 100px;
-        padding-top: 50px;
+        // margin-bottom: 100px;
+        // padding-top: 50px;
         .documentation-features {
             padding-bottom: 80px;
             margin-bottom: 80px;
@@ -382,7 +382,7 @@
         }
     }
     .content-info-layout {
-        margin-bottom: 100px;
+        // margin-bottom: 100px;
         padding-top: 50px;
         .main-heading-area {
             padding-bottom: 25px;
@@ -547,7 +547,7 @@
         }
     }
     .layouts-info-layout {
-        margin-bottom: 100px;
+        // margin-bottom: 100px;
         padding-top: 50px;
         .main-heading-area {
             padding-bottom: 25px;
