--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -32,22 +32,29 @@
                         background: #6C62CA;
                         border-radius: 0px 50px 50px 50px;
                     }
-                    .arrow {
+                    .arrow, .active-arrow {
                         position: absolute;
                         right: 20px;
                     }
+                    .arrow {
+                        display: block;
+                    }
+                    .active-arrow {
+                        display: none;
+                    }
+
                     &.active {
                         color: pink;
                     }
                 }
                 .dropdown_nav {
                     background: $color-white;
-                    padding: 6px 0 2px 50px;
-                    padding-top: 6px;
-                    padding-bottom: 22px;
                     padding-left: 50px;
-                    display: none;
-                    @include transition;
+                    // display: none;
+                    transition: opacity 1s ease-out;
+                    opacity: 0;
+                    height: 0;
+                    overflow: hidden;
                     .nav-item {
                         background: 0 0;
                         margin: 0;
@@ -101,12 +108,20 @@
                     }
                 }
                 &.active {
-                    .dropdown_nav {
-                        display: block;
+                    a {
                         @include transition;
+                        .arrow {
+                            display: none;
+                        }
+                        .active-arrow {
+                            display: block;
+                        }
                     }
-                    .nav-link {
-                        // color: red;
+                    .dropdown_nav {
+                        // display: block;
+                        @include transition;
+                        opacity: 1;
+                        height: 260px;
                     }
                 }
             }
