--- a/scss/components/_cp-blog-post-card.scss
+++ b/scss/components/_cp-blog-post-card.scss
@@ -156,8 +156,69 @@
                 }
             }
         }
-
     }
+    &--style-3 {
+        border-radius: 10px 10px 0px 0px;
+        background: $color-white;
+        .blog-post-img {
+            margin-bottom: 7px;
+            .blog-post-img-link {
+                img {
+                    filter: grayscale(0);
+                }
+            }
+        }
+        .author-name {
+            font-size: 14px;
+            line-height: 16px;
+            color: #7B7B7B;
+            margin-bottom: 5px;
+        }
+        .blog-post-content {
+            padding: 0;
+            background: transparent;
+            box-shadow: none;
+            .blog-post-title {
+                a {
+                    font-family: $font-roboto;
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: $color-title;
+                }
+            }
+        }
+    }
+    &--style-4 {
+        border-radius: 10px 10px 0px 0px;
+        background: $color-white;
+        .blog-post-img {
+            margin-bottom: 25px;
+            .blog-post-img-link {
+                img {
+                    filter: grayscale(0);
+                }
+            }
+        }
+        .author-name {
+            font-size: 14px;
+            line-height: 16px;
+            color: #7B7B7B;
+            margin-bottom: 10px;
+        }
+        .blog-post-content {
+            padding: 0;
+            background: transparent;
+            box-shadow: none;
+            .blog-post-title {
+                a {
+                    font-size: 30px;
+                    line-height: 24px;
+                }
+            }
+        }
+    }
+
 }
 
 .blog-section {
