--- a/scss/layouts/_lo-elements.scss
+++ b/scss/layouts/_lo-elements.scss
@@ -605,6 +605,168 @@
             }
         }
     }
+    .change-logs-info-layout {
+        padding-top: 50px;
+        .main-heading-area {
+            padding-bottom: 25px;
+            margin-bottom: 25px;
+            border-bottom: 1px solid #D9D9D9;
+            .title {
+                font-family: $font-roboto;
+                font-weight: 600;
+                font-size: 22px;
+                line-height: 26px;
+                color: $color-title;
+                margin-bottom: 9px;
+            }
+            .para-text {
+                font-size: 15px;
+                line-height: 18px;
+            }
+        }
+        .widget-title-area {
+            margin-bottom: 25px;
+            .title {
+                font-family: $font-roboto;
+                font-weight: 700;
+                font-size: 19px;
+                line-height: 22px;
+                color: $color-title;
+            }
+            .para-text {
+
+            }
+        }
+        .change-log-widget {
+            .change-logs-accordion-wrapper {
+                margin-bottom: 25px;
+            }
+            .timeline {
+                position: relative;
+                margin-bottom: 30px;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 6px;
+                    background-color: $color-secondary;
+                    top: 0;
+                    bottom: 0;
+                    left: 50%;
+                }
+                .left {
+                    left: 0;
+                }
+                .right {
+                    left: 50%;
+                    .content {
+                        &::after {
+                            left: -50px;
+                            // z-index: 1;
+                        }
+                    }
+                }
+                .content-container {
+                    padding: 10px 40px;
+                    position: relative;
+                    width: 50%;
+                    .content {
+                        padding: 15px 20px;
+                        background-color: $color-white;
+                        position: relative;
+                        border-radius: 8px;
+                        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+                        &::after {
+                            content: "\2713";
+                            position: absolute;
+                            width: 25px;
+                            height: 25px;
+                            right: -55px;
+                            background-color: $color-secondary;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            top: -10px;
+                            border-radius: 50%;
+                            z-index: 1;
+                            color: White;
+                        }
+                        h3 {
+                            font-family: $font-roboto;
+                            color: gray;
+                            font-weight: 400;
+                            margin-bottom: 5px;
+                        }
+                        ul {
+                            margin-left: 16px;
+                            li {
+                                list-style: disc;
+                                &::marker {
+                                    color: $color-secondary;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .depth-widget {
+            .ftp, .wordpress {
+                background: #F9F9F9;
+                border: 1px solid #EBEBEB;
+                padding: 16px 9px;
+                font-family: $font-roboto;
+                font-weight: 400;
+                font-size: 10px;
+                line-height: 12px;
+                letter-spacing: 0.1em;
+                color: #7E7E7E;
+                margin-bottom: 12px;
+            }
+            .wordpress {
+                margin-bottom: 30px;
+            }
+            .list-title {
+                margin-bottom: 14px;
+            }
+        }
+    }
+
+    .blog-post-info-layout {
+        padding-top: 50px;
+        .main-heading-area {
+            padding-bottom: 25px;
+            margin-bottom: 25px;
+            border-bottom: 1px solid #D9D9D9;
+            .title {
+                font-family: $font-roboto;
+                font-weight: 600;
+                font-size: 22px;
+                line-height: 26px;
+                color: $color-title;
+                margin-bottom: 9px;
+            }
+            .para-text {
+                font-size: 15px;
+                line-height: 18px;
+            }
+        }
+        .blog-post-widget {
+            margin-bottom: 45px;
+            .widget-title-area {
+                margin-bottom: 30px;
+                .title {
+                    font-family: $font-roboto;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 21px;
+                    color: $color-title;
+                }
+                .para-text {
+
+                }
+            }
+        }
+    }
 
     .single-element-action-area {
         background: #FFFFFF;
