--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -189,7 +189,7 @@
         &:hover {
             color: unset;
             .icon {
-                background: $color-secondary;
+                // background: $color-secondary;
                 border: 1px solid transparent;
                 svg {
                     path {
