--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -35,33 +35,21 @@
                                 transform-origin: 100% 50%;
                                 transform: scale3d(0, 1, 1);
                                 transition: transform 0.4s cubic-bezier(0.7, 0, 0.2, 1);
-                                top: 90%;
-                            }
-                            &::after {
-                                content: '';
-                                top: calc(90% + 4px) !important;
-                                transform-origin: 0% 50%;
-                                transform: scale3d(0, 1, 1);
-                                transition: transform 0.4s cubic-bezier(0.7, 0, 0.2, 1);
-                            }
-                            &::before, &::after {
+                                top: 85%;
+                                
                                 position: absolute;
                                 width: 100%;
-                                height: 1px;
+                                height: 2px;
                                 background: $color-shade25;
-                                // top: 100%;
                                 left: 0;
                                 pointer-events: none;
                             }
+                            // &::before {
+                            // }
 
                             &:hover {
                                 &::before {
                                     transform-origin: 0% 50%;
-                                    transform: scale3d(1, 1, 1);
-                                    transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
-                                }
-                                &::after {
-                                    transform-origin: 100% 50%;
                                     transform: scale3d(1, 1, 1);
                                     transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
                                 }
