Fix home2 testimonial

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -59,7 +59,7 @@
 
 
 .swiper {
-    padding-bottom: 80px;
+    // padding-bottom: 80px;
     @include media-only ('md' min) {
         padding-bottom: 120px;
     } 
