--- a/scss/layouts/_lo-testimonial.scss
+++ b/scss/layouts/_lo-testimonial.scss
@@ -1,11 +1,17 @@
 .testimonial-section {
     overflow: hidden;
     &--style-2 {
-        padding-top: 28px;
+        margin-top: 70px;
+        // padding-top: 50px;
         background: #fafafa;
+        .testimonial-item {
+            // margin-bottom: 170px;
+            margin-top: 100px;
+        }
         .testimonial-img-area {
             position: relative;
             z-index: 1;
+            padding-top: 60px;
             img {
                 // max-width: unset;
             }
@@ -21,7 +27,7 @@
                 display: inline-block;
                 left: 0;
                 right: 0;
-                top: 175px;
+                bottom: -110px;
                 display: none;
                 @include transition;
                 @include media-only("lg", min) {
@@ -48,12 +54,12 @@
                 }
             }
             .prev {
-                top: 95%;
-                left: 43%;
+                top: 86%;
+                left: 72%;
             }
             .next {
-                top: 95%;
-                right: 43%;
+                top: 86%;
+                right: 21%;
             }
         }
     }
