--- a/scss/layouts/_lo-best-online-doc.scss
+++ b/scss/layouts/_lo-best-online-doc.scss
@@ -1,4 +1,5 @@
 .best-online-documentation-section {
+    overflow: unset;
     .theme-logo-wrapper {
         li {
             margin-bottom: 15px;
